fix(DrBasicInfo): 💄 no gap dr type & clinic icon

--- a/src/components/HomeSections/DrInfo/DrBasicInfo/DrBasicInfo.module.css
+++ b/src/components/HomeSections/DrInfo/DrBasicInfo/DrBasicInfo.module.css
@@ -20,4 +20,5 @@
 .BasicInfo .TypeContainer {
   display: flex;
   flex-wrap: no-wrap;
+  gap: 0.5em;
 }
